# mspr3

./: README.md  note_installation.md  note_utilisation_kedro_mlflow_uv.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  mlflow.yml  parameters_prepare_data.yml  parameters_preprocess_data_30min.yml  parameters_train_tft.yml  parameters_train_xgboost_30min.yml  parameters_train_xgboost_day.yml  parameters_tune_xgboost_30min.yml  parameters_tune_xgboost_day.yml  parameters_xgboost_training_day.yml
notebooks/: conformal_prediction.ipynb  conformal_predictions_manual.ipynb  conformal_predictions_xgboost.ipynb  inference.ipynb
src/edf_forecasting/: __init__.py  __main__.py  settings.py
src/edf_forecasting/components/: eco2mix_add_features.py  eco2mix_add_tempo.py  eco2mix_aggregate.py  eco2mix_calibrate_xgboost_30min.py  eco2mix_clean_data.py  eco2mix_create_tsdataset_tft.py  eco2mix_cross_validation_xgboost_day.py  eco2mix_evaluate_gboost_day.py  eco2mix_evaluate_model_tft.py  eco2mix_evaluate_xgboost_30min.py  eco2mix_generate_prediction_plots_gboost_day.py  eco2mix_generate_tuning_plots_gboost_day.py  eco2mix_prepare_tft_data.py  eco2mix_preprocess_gboost_day.py  eco2mix_prestructuration_data.py  eco2mix_scraper.py  eco2mix_train_gboost_day.py  eco2mix_train_model_tft.py  eco2mix_train_xgboost_30min.py  eco2mix_tune_gboost_day.py  eco2mix_tune_xgboost_30min.py
src/edf_forecasting/datasets/: optuna_study_dataset.py
src/edf_forecasting/pipelines/prepare_data/: __init__.py  nodes.py  pipeline.py
src/edf_forecasting/pipelines/preprocess_data_30min/: __init__.py  nodes.py  pipeline.py
src/edf_forecasting/pipelines/train_tft/: __init__.py  nodes.py  pipeline.py
src/edf_forecasting/pipelines/train_xgboost_30min/: __init__.py  nodes.py  pipeline.py
src/edf_forecasting/pipelines/train_xgboost_day/: __init__.py  nodes.py  pipeline.py
src/edf_forecasting/pipelines/tune_xgboost_30min/: __init__.py  nodes.py  pipeline.py
src/edf_forecasting/pipelines/tune_xgboost_day/: __init__.py  nodes.py  pipeline.py
src/edf_forecasting/pipelines/xgboost_training_day/: __init__.py  nodes.py  pipeline.py
src/kedro_mspr/: __init__.py  __main__.py  settings.py
tests/pipelines/prepare_data/: test_pipeline.py
tests/pipelines/preprocess_data_30min/: test_pipeline.py
tests/pipelines/train_tft/: test_pipeline.py
tests/pipelines/train_xgboost_30min/: test_pipeline.py
tests/pipelines/train_xgboost_day/: test_pipeline.py
tests/pipelines/tune_xgboost_30min/: test_pipeline.py
tests/pipelines/xgboost_training_day/: test_pipeline.py
