[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "edf_forecasting"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
 "ipython>=8.10",
 "jupyterlab>=3.0",
 "notebook",
 "kedro~=0.19.12",
 "pandas>=2.2.3",
 "numpy>=2.0.2",
 "matplotlib>=3.9.4",
 "ipywidgets>=8.1.7",
 "scikit-learn>=1.5.2",
 "missingno>=0.5.2",
 "shap>=0.47.2",
 "holidays>=0.72",
 "plotly>=6.0.1",
 "pyarrow>=20.0.0",
 "fastparquet>=2024.11.0",
 "xgboost>=2.1.4",
 "optuna>=4.3.0",
 "mapie>=0.9.2",
 "pytorch-forecasting>=1.3.0",
 "tensorboard>=2.19.0",
 "kedro-datasets[json,pandas,pickle,text,tracking]>=4.1.0",
 "kedro-viz>=11.0.1",
]

[project.scripts]
kedro-mspr = "edf_forecasting.__main__:main"

[project.optional-dependencies]
dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.1.8",]

[tool.kedro]
package_name = "edf_forecasting"
project_name = "edf_forecasting"
kedro_init_version = "0.19.12"
tools = "['Linting', 'Testing', 'Custom Logging', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501",]

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/edf_forecasting -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.version]
attr = "edf_forecasting.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "224c1c532ad54936ae09e5d3ce979ff7"
